Make environment configurable using environment variables

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
   <meta name="theme-color" content="#ffffff">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script src="assets/env.js"></script>
 </head>
 
 <body>
